--- a/SD-K-F2M3BO-Duurzaam-Huis-BO-main/les2B/style.css
+++ b/SD-K-F2M3BO-Duurzaam-Huis-BO-main/les2B/style.css
@@ -1,22 +1,31 @@
-
+h1 {
+    text-align: center;
+}
 html{
     font-family: monospace;
     font-weight: bold; 
     font-size: 1.5em;
     }
 .myForm{
-    width: 50%;         
+    width: 50%;  
+    background-color: salmon;
+    margin-left: 380px;       
     }       
 .myForm input[type=text]{
-    width: 30%;
+    width: 50%;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
-    border-color: #FF00FF;
-    }     
+    border: 3px;
+    background-color: pink;
+    }    
 #antwoordHier{
     font-family: sans-serif;
     font-size: 0.7em;
-    width: 50%;
-    border: 1px solid;
+    width: 49.7%;
+    border: 3px solid;
+    background-color: rgb(255, 101, 242);
+    margin-left: 380px;
+    text-align: center;
 }
+
